--- a/compose.yml
+++ b/compose.yml
@@ -1,9 +1,9 @@
-name : Asterisk 
+name: <your project name>
 services:
-  monasterisk:
-    container_name: c_monasterisk
-    volumes:
-      -"./asterisk_conf:/etc/asterisk"
-    ports:
-      - 5060:5060/udp
-    image: quebotek/monasterisk
+    monasterisk:
+        container_name: c_monasterisk
+        ports:
+            - 5060:5060/udp
+        volumes:
+            - ./asterisk_conf:/etc/asterisk
+        image: monasterisk
