--- a/compose.yml
+++ b/compose.yml
@@ -6,4 +6,4 @@ services:
             - 5060:5060/udp
         volumes:
             - ./asterisk_conf:/etc/asterisk
-        image: monasterisk
+        image: quebotek/monasterisk
