--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,4 @@
-name: <your project name>
+name: asterisk
 services:
     monasterisk:
         container_name: c_monasterisk
@@ -6,4 +6,8 @@ services:
             - 5060:5060/udp
         volumes:
             - asterisk_conf:/etc/asterisk
-        image: quebotek/monasterisk
+        image: monasterisk
+volumes:
+    asterisk_conf:
+        external: true
+        name: asterisk_conf
