--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
             - 5060:5060/udp
         volumes:
             - asterisk_conf:/etc/asterisk
-        image: monasterisk
+        image: quebotek/monasterisk
 volumes:
     asterisk_conf:
         external: true
