--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
             - 5060:5060/udp
         volumes:
             - asterisk_conf:/etc/asterisk
-        image: quebotek/asterisk
+        image: quebotek/monasterisk
     dnsmasq:
         container_name: c_dns
         ports:
