--- a/compose.yml
+++ b/compose.yml
@@ -13,7 +13,7 @@ services:
             - 53:53/udp
             - 53:53
         volumes:
-            - dns_conf/dnsmasq.conf:/etc/dnsmasq.conf
+            - ./dnsmasq.conf:/etc/dnsmasq.conf
         cap_add:
             - NET_ADMIN
         image: andyshinn/dnsmasq
@@ -21,6 +21,3 @@ volumes:
     asterisk_conf:
         external: true
         name: asterisk_conf
-    dns_conf:
-        external: true
-        name: dns_conf
