--- a/compose.yml
+++ b/compose.yml
@@ -7,16 +7,15 @@ services:
         volumes:
             - asterisk_conf:/etc/asterisk
         image: quebotek/monasterisk
-    dnsmasq:
-        container_name: c_dns
-        ports:
-            - 53:53/udp
-            - 53:53
+    dns:
+        build: .
+        restart: 'unless-stopped'
         volumes:
-            - ./dnsmasq.conf:/etc/dnsmasq.conf
-        cap_add:
-            - NET_ADMIN
-        image: andyshinn/dnsmasq
+        - '/etc/localtime:/etc/localtime:ro'
+        - './dnsmasq.conf:/etc/dnsmasq.conf:ro'
+        ports:
+        - '53:53/tcp'
+        - '53:53/udp'
 volumes:
     asterisk_conf:
         external: true
