--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
-name: Projet_TRI
+name: <your project name>
 services:
-    asterisk:
+    monasterisk:
         container_name: c_asterisk
         ports:
             - 5060:5060/udp
@@ -8,14 +8,11 @@ services:
             - asterisk_conf:/etc/asterisk
         image: quebotek/monasterisk
     dns:
-        build: .
-        restart: 'unless-stopped'
-        volumes:
-        - '/etc/localtime:/etc/localtime:ro'
-        - './dnsmasq.conf:/etc/dnsmasq.conf:ro'
-        ports:
-        - '53:53/tcp'
-        - '53:53/udp'
+        container_name: c_dns
+        environment:
+            - DNS_DOMAIN=.projet
+            - DNS_IP=10.1.1.2
+        image: docksal/dns
 volumes:
     asterisk_conf:
         external: true
