--- a/compose.yml
+++ b/compose.yml
@@ -4,11 +4,13 @@ services:
         container_name: c_asterisk
         ports:
             - 5060:5060/udp
-            - 10000-20000:10000-20000
+            - 10000-20000:10000-20000/udp
         volumes:
-            - asterisk_conf:/etc/asterisk
+            - ./config/sip.conf:/etc/asterisk/sip.conf
+            - ./config/extensions.conf:/etc/asterisk/extensions.conf
         image: quebotek/monasterisk
-volumes:
-    asterisk_conf:
-        external: false
-        name: asterisk_conf
+        networks:
+            - Toip
+networks:
+    Toip:
+        driver: bridge 
